tests/files/type_checker_tests/should_pass/281.cmdr
//Test aliases type check
alias ll = ls -al;
