tests/files/type_checker_tests/should_fail/194.cmdr
//Should fail if using variable out of scope
{
    alias ll = ls -al;
}
x = ll;
